--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,10 @@
 
 #InteliJ
 .idea
-spring-sandbox.iml
+*.iml
+
+#Generated sources
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
