--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,17 @@
         <version>1.5.2.RELEASE</version>
     </parent>
 
+    <properties>
+        <java.version>1.8</java.version>
+        <flyway.version>3.2.1</flyway.version>
+        <postgres.driver.version>9.2-1002.jdbc4</postgres.driver.version>
+        <database.url>jdbc:mysql://localhost:3312</database.url>
+        <database.user>root</database.user>
+        <database.password>root</database.password>
+        <database.schema>SPRING_SANDBOX</database.schema>
+        <mysql.driver>com.mysql.cj.jdbc.Driver</mysql.driver>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,7 +37,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
-            <version>3.2.1</version>
+            <version>${flyway.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -60,10 +71,6 @@
         </dependency>
     </dependencies>
 
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
     <build>
         <plugins>
             <plugin>
@@ -79,16 +86,16 @@
                 </executions>
                 <configuration>
                     <jdbc>
-                        <driver>com.mysql.cj.jdbc.Driver</driver>
-                        <url>jdbc:mysql://localhost:3312</url>
-                        <user>root</user>
-                        <password>root</password>
+                        <driver>${mysql.driver}</driver>
+                        <url>${database.url}</url>
+                        <user>${database.user}</user>
+                        <password>${database.password}</password>
                     </jdbc>
                     <generator>
                         <database>
                             <name>org.jooq.util.mysql.MySQLDatabase</name>
                             <includes>.*</includes>
-                            <inputSchema>SPRING_SANDBOX</inputSchema>
+                            <inputSchema>${database.schema}</inputSchema>
                             <outputSchemaToDefault>true</outputSchemaToDefault>
                         </database>
                         <target>
@@ -96,6 +103,23 @@
                             <directory>target/generated-sources/jooq</directory>
                         </target>
                     </generator>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>${flyway.version}</version>
+                <configuration>
+                    <sqlMigrationSeparator>__</sqlMigrationSeparator>
+                    <locations>
+                        <location>filesystem:src/main/resources/db/migration</location>
+                    </locations>
+                    <url>${database.url}</url>
+                    <user>${database.user}</user>
+                    <password>${database.password}</password>
+                    <schemas>
+                        <schema>${database.schema}</schema>
+                    </schemas>
                 </configuration>
             </plugin>
             <plugin>
