--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>jooq</artifactId>
             <version>3.9.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
